# ai_desensitization

./: README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/components/app/: app.dart
lib/src/components/rule/: _word_with_tag.dart  add_rule_dialog.dart  add_word_button.dart  rule_screen.dart  rules_widget.dart  word_desensitization.dart  word_replace.dart  word_with_tag.dart
lib/src/components/sidebar/: sidebar.dart
lib/src/isar/: database.dart  rule.dart  rule.g.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart
lib/src/rust/api/: nlp.dart
lib/src/rust/nlp/: tags.dart  (+5 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  nlp.rs
rust/src/nlp/: jieba_tag.rs  mask.rs  mod.rs  remove.rs  replace.rs  tags.rs  utils.rs  words.rs
rust/src/test/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_ai_desensitization.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ai_desensitization.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
