[package]
name = "rust_lib_ai_desensitization"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.97"
fake = "4.0.0"
flutter_rust_bridge = "=2.8.0"
jieba-rs = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
